--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "should": "~1.2.1",
     "grunt-simple-mocha": "~0.2.0",
     "grunt-bump": "0.0.1",
-    "grunt-docco": "~0.1.2"
+    "grunt-docco": "~0.1.2",
+    "grunt-mocha": "~0.1.7",
+    "chai": "~1.5.0"
   },
   "optionalDependencies": {},
   "engines": {
