--- a/package.json
+++ b/package.json
@@ -18,17 +18,27 @@
   },
   "main": "fluent-time.js",
   "scripts": {
-    "test": "mocha -R spec ./spec/"
+    "test": "./node_modules/karma/bin/karma start karma.conf.js"
   },
   "dependencies": {},
   "devDependencies": {
-    "mocha": "~1.6.0",
-    "should": "~1.2.1",
-    "grunt-simple-mocha": "~0.2.0",
-    "grunt-bump": "0.0.1",
-    "grunt-docco": "~0.1.2",
-    "grunt-mocha": "~0.1.7",
-    "chai": "~1.5.0"
+    "should": "~1.2.2",
+    "chai": "~1.5.0",
+    "mocha": "~1.20.1",
+    "grunt": "~0.4.5",
+    "gulp-uglify": "~0.3.0",
+    "gulp": "~3.7.0",
+    "jshint-stylish": "~0.2.0",
+    "gulp-jshint": "~1.6.2",
+    "gulp-util": "~2.2.16",
+    "gulp-plumber": "~0.6.2",
+    "gulp-rename": "~1.2.0",
+    "karma-sinon": "~1.0.3",
+    "karma-mocha": "~0.1.3",
+    "karma-chai": "~0.1.0",
+    "karma": "~0.12.16",
+    "karma-phantomjs-launcher": "~0.1.4",
+    "karma-chai-sinon": "~0.1.3"
   },
   "optionalDependencies": {},
   "engines": {
